apps/base/vaultwarden/vaultwarden-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=bitwarden}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Vaultwarden"
    gethomepage.dev/description: "Lightweight Bitwarden-compatible server"
    gethomepage.dev/app: vaultwarden
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/bitwarden.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${SUBDOMAIN:=bitwarden}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
          namespace: vaultwarden
